--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,18 +1,19 @@
 @import 'navbar.less';
 @import 'global.less';
 @import 'home.less';
+@import "dashboard.less";
 
 html, body {
   min-height: 100vh;
   padding: 0;
   margin: 0;
-  
+
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden;
-  
+
   -webkit-perspective: 1000px;
   -moz-perspective: 1000px;
   -ms-perspective: 1000px;
