--- a/public/css/navbar.less
+++ b/public/css/navbar.less
@@ -57,7 +57,7 @@
   top: 0;
   right: -100%;
   bottom: 0;
-  min-height: 100%;
+  min-height: 100vh;
   width: 100%;
   background-color: @primary-color;
   z-index: 199;
