Working on Navigation Menu

--- a/public/css/navbar.less
+++ b/public/css/navbar.less
@@ -92,3 +92,23 @@
   -o-transform: translate3d(-100%, 0, 0);
   transform: translate3d(-100%, 0, 0);
 }
+
+@media @media-x-large  {
+  .side-bar-toggle-show {
+    -webkit-transform: translate3d(-25%, 0, 0);
+  -moz-transform: translate3d(-25%, 0, 0);
+  -ms-transform: translate3d(-25%, 0, 0);
+  -o-transform: translate3d(-25%, 0, 0);
+  transform: translate3d(-25%, 0, 0);
+  }
+}
+
+@media @media-large, @media-medium, @media-small {
+    .side-bar-toggle-show {
+    -webkit-transform: translate3d(-50%, 0, 0);
+  -moz-transform: translate3d(-50%, 0, 0);
+  -ms-transform: translate3d(-50%, 0, 0);
+  -o-transform: translate3d(-50%, 0, 0);
+  transform: translate3d(-50%, 0, 0);
+  }
+}
