--- a/public/views/index.html
+++ b/public/views/index.html
@@ -37,7 +37,7 @@
     <header class="navigation-bar">
         <div class="container">
             <div class="navigation-brand">
-                <a href="#">
+                <a href="/">
                     <span class="navigation-brand-title animated fadeIn">releet</span>
                 </a>
             </div>
