--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,13 +2,15 @@
   position: fixed;
   top: 0;
   left: 0;
-  border-bottom: 1px solid #f9d406;
+  box-sizing: border-box;
   background-color: #097c9c;
   color: #f2f2f2;
   height: 70px;
-  min-width: 100%;
+  width: 100%;
   overflow: hidden;
   z-index: 200;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
 .navigation-bar .navigation-brand {
   font-weight: 100;
@@ -67,6 +69,9 @@
   box-sizing: border-box;
   padding: 30px;
   border-bottom: 1px solid #f9d406;
+}
+.side-bar ul li:first-child {
+  border-top: 1px solid #f9d406;
 }
 .side-bar ul li a {
   font-size: 20px;
