--- a/public/css/style.less
+++ b/public/css/style.less
@@ -14,11 +14,11 @@ html, body {
   -o-backface-visibility: hidden;
   backface-visibility: hidden;
 
-  -webkit-perspective: 1000px;
-  -moz-perspective: 1000px;
-  -ms-perspective: 1000px;
-  -o-perspective: 1000px;
-  perspective: 1000px;
+  // -webkit-perspective: 1000px;
+  // -moz-perspective: 1000px;
+  // -ms-perspective: 1000px;
+  // -o-perspective: 1000px;
+  // perspective: 1000px;
 }
 
 body {
